[package]
name = "tt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
chrono = { version = "0.4.26", features = ["serde"] }
clap = { version = "4.3.19", features = ["derive", "cargo"] }
dirs = "5.0.1"
env_logger = "0.10.0"
log = "0.4.19"
serde = { version = "1.0.180", features = ["serde_derive"] }
serde_json = "1.0.104"
tabled = "0.14.0"
tokio = { version = "1.29.1", features = ["full"] }

[features]
cargo = []
